--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,7 @@ dependencies:
   toastification: ^3.0.2
   cached_network_image: ^3.4.1
   shimmer: ^3.0.0
-  flutter_svg: ^2.0.17
-  equatable: ^2.0.7
+  device_preview: ^1.2.0
 
 dev_dependencies:
   flutter_test:
