--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shimmer: ^3.0.0
   device_preview: ^1.2.0
   bloc_test: ^10.0.0
+  mocktail: ^1.0.4
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
